message Hash{
    required bytes hash = 1;
}

message Address{
    required bytes address = 1;
}

message CompressedKey {
    required bytes address = 1;
}

message coin{
    required uint64 satoshis = 1;
}

message Header{
    required int64 version = 1;
    required uint64 blockID = 2;
    required Hash parentHash = 3;
    required Hash merkleRoot = 4;
    required Hash forkRoot = 5;
    required int64 timeStamp = 6;
    required double difficulty = 7;
    required int64 nonce = 8;
    required Address minerAddress = 9;
    required coin reward = 10;
}

message TransactionOutput{
    required Hash txid = 1;
    required Address owner = 2;
}

message Transaction{
    required CompressedKey sender = 1;
    required Address receiver = 2;
    required coin amount = 3;
    required uint64 fee = 4;
    repeated TransactionOutput outputs = 5;
    required bytes data = 6;
}

message Block{
    required Header header = 1;
}